graphic design + implementation sortie et obstacle

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
         <script src="js/script.js" type="module"></script>
     </head>
     <body>
-       <canvas width="800" height="800" id="myCanvas"></canvas>
+        <header>
+            <h1>TP CANVAS</h1>
+            <div id="heart_container">
+                <div class="heart"></div>
+                <div class="heart"></div>
+                <div class="heart"></div>
+            </div>
+        </header>
+        <main>
+            <canvas width="800" height="500" id="myCanvas"></canvas>
+        </main>
     </body>
 </html>
