commit final (perhaps)

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <header>
             <h1>TP CANVAS</h1>
             <div id="heart_container">
-                <div class="heart"></div>
-                <div class="heart"></div>
-                <div class="heart"></div>
+                <div class="heart" id="heart1"></div>
+                <div class="heart" id="heart2"></div>
+                <div class="heart" id="heart3"></div>
             </div>
         </header>
         <main>
